use for-empty-endfor

--- a/hello_django/templates/wut4lunch/index.html
+++ b/hello_django/templates/wut4lunch/index.html
@@ -5,15 +5,13 @@
 <p>Wut4Lunch is the latest social network where you can tell all your friends
 about your noontime repast!</p>
 
-{% if lunches %}
 <ul>
 {% for lunch in lunches %}
 <li><strong>{{ lunch.submitter }}</strong> just ate <strong>{{ lunch.food }}</strong></li>
+{% empty %}
+<em>Nobody has eaten lunch, you must all be starving!</em>
 {% endfor %}
 </ul>
-{% else %}
-<em>Nobody has eaten lunch, you must all be starving!</em>
-{% endif %}
 
 <h3>What are <em>YOU</em> eating?</h3>
 
